feat: 手动配置